...
    <string name="search_dots">Search…</string>
    <string name="text">Test text</string>
    <string name="icon">Icon</string>
    <string name="image">Image</string>
    <string name="stuff">Stuff</string>
    <string name="student">Student</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="alternative_test">name 1, name 2, name 3</string>
    <string name="basic_info">Basic information</string>
    <string name="species">Species:" "</string>
    <string name="species_test">Character species</string>
    <string name="gender">Gender:" "</string>
...
